noinst_LTLIBRARIES += %D%/libocdflashnand.la

%C%_libocdflashnand_la_SOURCES = \
	%D%/ecc.c \
	%D%/ecc_kw.c \
	%D%/core.c \
	%D%/fileio.c \
	%D%/tcl.c \
	%D%/arm_io.c \
	$(NAND_DRIVERS) \
	%D%/driver.c \
	$(NANDHEADERS)

NAND_DRIVERS = 

NANDHEADERS = \
	%D%/arm_io.h \
	%D%/core.h \
	%D%/driver.h \
	%D%/fileio.h \
	%D%/imp.h \
	%D%/lpc3180.h \
	%D%/lpc32xx.h \
	%D%/mxc.h \
	%D%/mx3.h \
	%D%/s3c24xx.h \
	%D%/s3c24xx_regs.h \
	%D%/nuc910.h
