
noinst_LTLIBRARIES += %D%/libocdflashnor.la
%C%_libocdflashnor_la_SOURCES = \
	%D%/core.c \
	%D%/tcl.c \
	$(NOR_DRIVERS) \
	%D%/drivers.c \
	$(NORHEADERS)

NOR_DRIVERS = \
	%D%/phoenix.c \
	%D%/phoenix05.c

NORHEADERS = \
	%D%/core.h \
	%D%/cc3220sf.h \
	%D%/bluenrg-x.h \
	%D%/cc26xx.h \
	%D%/cfi.h \
	%D%/driver.h \
	%D%/imp.h \
	%D%/non_cfi.h \
	%D%/ocl.h \
	%D%/sfdp.h \
	%D%/spi.h \
	%D%/stm32l4x.h \
	%D%/stmqspi.h \
	%D%/msp432.h
